# local-mcp-servers

./: .gitignore  README.md
mcp-fantasy-draft/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  server.py
mcp-fantasy-draft/agent-yahooff/: .env.example  .gitignore  README.md  SETUP.md  SUMMARY.md  mcp-config.json  pyproject.toml  requirements.txt  server.py  test_tools.py
mcp-fantasy-draft/utils/: auth_setup.py  league_settings.json
mcp-kroger/: .env.example  .gitignore  README.md  grocery_context.json  main.py  pyproject.toml  requirements.txt  server.py
mcp-kroger/src/kroger_cli/: __init__.py
mcp-kroger/src/kroger_core/: __init__.py  client.py  config.py  products.py  tokens.py
mcp-kroger/utils/: auth.py  kroger_mcp_api.py  product_search.py
